--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     </main>
     <footer id="main-footer" class="grid">
         <div>Acme Websolutions</div>
-        <div>Project by <a href="http://traversymedia.com" target="_blank">Joshua Pruefer</a></div>
+        <div>Project by <a href="https://github.com/jopruefer" target="_blank">Joshua Pruefer</a></div>
     </footer>
 
 </body>
